--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -62,7 +62,7 @@
         <ul class= "left-menu" >
           <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li4 = !li4"><span class='material-icons icon-style'>history_edu</span>Question</a>
             <ul class="{{li4 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
+              <li><a routerLink='set-question' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
               <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>library_books</span>My Question List</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>elevator</span>Students of X Exam</a></li>
             </ul>
