--- a/src/app/all-component/teacher/question-paper/question-paper.component.css
+++ b/src/app/all-component/teacher/question-paper/question-paper.component.css
@@ -69,10 +69,21 @@
 }
 .q-body .individual-q .i-q-title .q{
   padding-right: 7px;
-  width: 75%;
+  width: 68%;
 }
 .q-body .individual-q .i-q-title .m{
   width: 20%;
+  padding-right: 7px;
+}
+.q-body .individual-q .i-q-title .lock{
+  background: #e83e8c;
+  padding: 4px;
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 21px;
+  width: 7%;
+  height: 40px;
 }
 .q-body .individual-q .option-type{
   background: #fff;
@@ -85,14 +96,18 @@
   background: #fff;
 }
 .q-body .individual-q .i-q-option .option-p .op-id{
-  width: 15%;
+  width: 10%;
 }
 .q-body .individual-q .i-q-option .option-p .op{
-  width: 55%;
+  width: 50%;
   padding-right: 7px;
 }
 .q-body .individual-q .i-q-option .option-p .status{
   width: 30%;
+}
+.q-body .individual-q .i-q-option .option-p .lock{
+  width: 10%;
+  margin-right:7px;
 }
 .q-body .individual-q .i-q-option .option-p .status mat-label{
   margin-left: 10px;
