--- a/src/app/all-component/teacher/question-paper/question-paper.component.html
+++ b/src/app/all-component/teacher/question-paper/question-paper.component.html
@@ -59,15 +59,16 @@
 
         <form class="example-form">
           <div class = "i-q-title">
-            <h1>Q-1</h1>
+            <h1>Q-{{q.questionNo}}</h1>
             <mat-form-field class="example-full-width q">
               <mat-label class="title">Write Question</mat-label>
-              <input matInput placeholder="Write Your Question-" [formControl] = "examId">
+              <input matInput placeholder="Write Your Question-" [formControl] = "iQuestion">
             </mat-form-field>
             <mat-form-field class="example-full-width m">
               <mat-label class="title">Mark</mat-label>
-              <input matInput placeholder="mark" [formControl] = "examId">
+              <input matInput placeholder="mark" [formControl] = "mark">
             </mat-form-field>
+            <button class = "lock" (click)="lockQuestion(q.questionNo, iQuestion.value, mark.value)">LOCK</button>
           </div>
           <div class="option-type">
             <h1>Option Type</h1>
@@ -77,22 +78,24 @@
               <mat-radio-button value="3">Text Box</mat-radio-button>
             </mat-radio-group>
           </div>
-          <div class = 'i-q-option' *ngFor="let op of options">
+          <div class = 'i-q-option' *ngFor="let op of q.allOptions">
             <div class = 'option-p'>
-              <h1 class = 'op-id'>Option-1</h1>
+              <h1 class = 'op-id'>Option-{{op.optionNo}}</h1>
               <mat-form-field class="example-full-width op">
                 <mat-label class="title">Option</mat-label>
-                <input matInput placeholder="Write Your option" [formControl] = "examId">
+                <input matInput placeholder="Write Your option" [formControl] = "optionValue">
               </mat-form-field>
-              <mat-radio-group  [formControl]="floatLabelControl" class="status">
+              <mat-radio-group  [formControl]="optionState" class="status">
                 <mat-label>  Option Status</mat-label><br>
-                <mat-radio-button value="1" class="tr">True</mat-radio-button>
-                <mat-radio-button value="2">False</mat-radio-button>
+                <mat-radio-button value=1 class="tr">True</mat-radio-button>
+                <mat-radio-button value=0>False</mat-radio-button>
               </mat-radio-group>
+              <button class = "lock" (click)="LockOption(q.questionNo, op.optionNo,optionValue.value, optionState.value)">Lock Option</button>
+
             </div>
           </div>
           <div>
-            <button class = "create-q-button" (click)="createOption()">Add Option</button>
+            <button class = "create-q-button" (click)="createOption(q.questionNo)">Add Option</button>
           </div>
         </form>
 
@@ -100,6 +103,9 @@
       <div>
         <button class = "create-q-button" (click)="createQuestion()">Create Question</button>
       </div>
+    </div>
+    <div class = "submit-question">
+      <button (click)="SubmitQuestion()">Submit Question</button>
     </div>
   </mat-card-content>
 </div>
