--- a/src/app/all-component/teacher/my-question/my-question.component.html
+++ b/src/app/all-component/teacher/my-question/my-question.component.html
@@ -9,7 +9,7 @@
     <ng-container *ngIf="last" matColumnDef="{{disCol}}">
       <th mat-header-cell *matHeaderCellDef>{{displayedColumnName[colIndex]}}</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="primary" (click)="FunctionUpdate(element)">Details & Decision</button>
+        <button mat-raised-button color="primary" (click)="FunctionUpdate(element)">See Question</button>
       </td>
     </ng-container>
 
