--- a/src/app/all-component/teacher/question-paper/question-paper.component.css
+++ b/src/app/all-component/teacher/question-paper/question-paper.component.css
@@ -52,7 +52,7 @@
   border: none;
   color: #fff;
   text-transform: uppercase;
-  font-size: 21px;
+  font-size: 19px;
 }
 .q-body .individual-q{
   margin-bottom: 10px;
@@ -64,12 +64,12 @@
 }
 .q-body .individual-q .i-q-title h1{
   padding-right: 7px;
-  width: 5%;
+  width: 8%;
   color: var(--them-color-lite);
 }
 .q-body .individual-q .i-q-title .q{
   padding-right: 7px;
-  width: 75%;
+  width: 72%;
 }
 .q-body .individual-q .i-q-title .m{
   width: 20%;
@@ -101,5 +101,17 @@
   font-size: 20px;
   background: #e0a800;
 }
+.submit-question{
+  width: 100%;
+  background-image: linear-gradient(#03204c, #035c96);
+  padding: 4px;
+  border: 2px solid var(--them-color-lite);
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 21px;
+}
 
+.submit-question:hover{
+  background-image: linear-gradient(#035c96, #03204c);
+}
 
