create and desing selected-question but css not add, create student courese component

--- a/src/app/all-component/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/all-component/student/student-dashboard/student-dashboard.component.html
@@ -29,7 +29,7 @@
         <ul class= "left-menu" >
           <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li1 = !li1"><span class="material-icons icon-style">school</span>Courses</a>
             <ul class="{{li1 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-              <li><a routerLink='not-assign-yet' fragment='not-assign'><span class="material-icons icon-style sub-icon">pending</span>Present Courses</a></li>
+              <li><a routerLink='my-courses' fragment='not-assign'><span class="material-icons icon-style sub-icon">pending</span>Present Courses</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>checklist</span>Departmental Courses</a></li>
               <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>view_list</span>Completed Courses</a></li>
             </ul>
