--- a/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/all-component/admin/admin-dashboard/admin-dashboard.component.html
@@ -56,6 +56,7 @@
               <li><a routerLink='all-courses' fragment='not-assign'><span class='material-icons icon-style sub-icon'>view_list</span>All Course List</a></li>
               <li><a routerLink='add-course'><span class='material-icons icon-style sub-icon'>playlist_add</span>Add course</a></li>
               <li><a routerLink='assign-course'><span class='material-icons icon-style sub-icon'>card_giftcard</span>Assign Course</a></li>
+              <li><a routerLink='requested-course'><span class='material-icons icon-style sub-icon'>add_box</span>Requested Course</a></li>
             </ul>
           </li>
         </ul>
@@ -64,7 +65,7 @@
             <ul class="{{li4 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
               <li><a routerLink='set-question' fragment='not-assign'><span class='material-icons icon-style sub-icon'>post_add</span>Make Question</a></li>
               <li><a routerLink='my-questions' fragment='not-assign'><span class='material-icons icon-style sub-icon'>library_books</span>My Question List</a></li>
-              <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>elevator</span>Students of X Exam</a></li>
+<!--              <li><a routerLink=''><span class='material-icons icon-style sub-icon'>elevator</span>Students of X Exam</a></li>-->
             </ul>
           </li>
         </ul>
