--- a/src/app/all-component/teacher/question-paper/question-paper.component.html
+++ b/src/app/all-component/teacher/question-paper/question-paper.component.html
@@ -73,9 +73,10 @@
           <div class="option-type">
             <h1>Option Type</h1>
             <mat-radio-group  [formControl]="allOptionTypeReceiver[q.questionNo-1]">
-              <mat-radio-button value="1" class="tr">single True</mat-radio-button>
-              <mat-radio-button value="2">Multiple True</mat-radio-button>
-              <mat-radio-button value="3">Text Box</mat-radio-button>
+<!--              ascii value use 176, 177, 178-->
+              <mat-radio-button value="░" class="tr">single True</mat-radio-button>
+              <mat-radio-button value="▒">Multiple True</mat-radio-button>
+              <mat-radio-button value="▓">Text Box</mat-radio-button>
             </mat-radio-group>
           </div>
           <div class = 'i-q-option' *ngFor="let op of q.allOptions">
@@ -87,8 +88,8 @@
               </mat-form-field>
               <mat-radio-group  [formControl]="allOptionStateReceiver[q.questionNo-1][op.optionNo-1]" class="status">
                 <mat-label>  Option Status</mat-label><br>
-                <mat-radio-button value=1 class="tr">True</mat-radio-button>
-                <mat-radio-button value=0>False</mat-radio-button>
+                <mat-radio-button value=true class="tr">True</mat-radio-button>
+                <mat-radio-button value=false>False</mat-radio-button>
               </mat-radio-group>
             </div>
           </div>
