add examine answerScript two module(see exam list, see students on that exam), and change some necessery things ;

--- a/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/all-component/teacher/teacher-dashboard/teacher-dashboard.component.html
@@ -58,7 +58,7 @@
           <ul class= "left-menu" >
             <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li4 = !li4"><span class='material-icons icon-style'>verified</span>Result</a>
               <ul class="{{li4 ? 'left-sub-menu-show left-sub-menu': 'left-sub-menu'}}" >
-                <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>description</span>Examine AnswerScript</a></li>
+                <li><a routerLink='waiting-for-examining-question-list' fragment='not-assign'><span class='material-icons icon-style sub-icon'>description</span>Examine AnswerScript</a></li>
                 <li><a routerLink='not-assign-yet' fragment='not-assign'><span class='material-icons icon-style sub-icon'>check_circle</span>Assign Grade</a></li>
                 <li><a routerLink='login'><span class='material-icons icon-style sub-icon'>pending_actions</span>Pending Result</a></li>
               </ul>
