--- a/src/app/all-component/teacher/examine-ans-script/examine-ans-script.component.html
+++ b/src/app/all-component/teacher/examine-ans-script/examine-ans-script.component.html
@@ -9,7 +9,7 @@
     <ng-container *ngIf="last" matColumnDef="{{disCol}}">
       <th mat-header-cell *matHeaderCellDef>{{displayedColumnName[colIndex]}}</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="primary" (click)="FunctionUpdate(element.examId)">{{btnNm}}</button>
+        <button mat-raised-button color="primary" (click)="FunctionUpdate(element)">{{btnNm}}</button>
       </td>
     </ng-container>
 
