--- a/src/app/all-component/teacher/assign-cgpa/assign-cgpa.component.html
+++ b/src/app/all-component/teacher/assign-cgpa/assign-cgpa.component.html
@@ -9,7 +9,13 @@
     <ng-container *ngIf="last" matColumnDef="{{disCol}}">
       <th mat-header-cell *matHeaderCellDef>{{displayedColumnName[colIndex]}}</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="primary" (click)="FunctionUpdate(element)">See Students</button>
+        <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <mat-label>Assign Mark</mat-label>
+          <input matInput placeholder="Ex. 5" [formControl]="grade" >
+        </mat-form-field>
+      </form>
+        <button mat-raised-button color="primary" (click)="sendMark()">See Question</button>
       </td>
     </ng-container>
 
