add exam-hall module, implement their countdown timer, exact time redirect fecility, add my image in home, implemnet some method in service layer

--- a/src/app/all-component/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/all-component/student/student-dashboard/student-dashboard.component.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
         <ul class= "left-menu">
-          <li ><a routerLink="get-question-paper-with-ans-script"><span class="material-icons icon-style">villa</span>Exam Hall</a></li>
+          <li ><a routerLink="exam-hall"><span class="material-icons icon-style">villa</span>Exam Hall</a></li>
         </ul>
         <ul class= "left-menu" >
           <li class="has-left-sub-menu"><a (click) = "enableSubMenu(); li3= !li3"><span class='material-icons icon-style'>reviews</span>Review</a><span class="material-icons hot">new_releases</span>
