--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -85,7 +85,7 @@
 
             <br>
             <div>
-              <img style="float: left; padding:8px;" src="https://media.licdn.com/dms/image/D5603AQEJA4GQPv2IWg/profile-displayphoto-shrink_800_800/0/1667802976969?e=2147483647&v=beta&t=m6IONerAXBM8SC1iyXTTx90qcLLSwgIycF_022ZJoh8" alt="" width="100" height="100">
+              <img style="float: left; padding:8px;" src="assets/images/nabendu.jpg" alt="" width="100" height="100">
 
               <h5><a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda</a></h5>
               <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
