--- a/src/app/all-component/teacher/all-student/all-student.component.html
+++ b/src/app/all-component/teacher/all-student/all-student.component.html
@@ -10,4 +10,4 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"  [ngClass]="{'title-color-show': true}"></mat-header-row>
   <mat-row *matRowDef="let row;let odd = odd; columns: displayedColumns;" [ngClass]="{'color-show': odd }"></mat-row>
 </mat-table>
-<h4 *ngIf="!isemp">You Don't Have any student in this Course...</h4>
+<h4 *ngIf="!isemp">No Student Their...</h4>
