--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -1,10 +1,8 @@
 
 <router-outlet></router-outlet>
-
-  <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
 
-      <img src="../assets/images/courses-video.png" width="100%">
+      <img src="../../../../assets/images/courses-video.png" width="100%">
 
       <div class="video-overlay header-text">
           <div class="caption">
