--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.html
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.html
@@ -1,7 +1,7 @@
 <!--header-->
 <header class="main-header" role="header">
     <div class="logo">
-      <a routerLink="home"><em><img class="logo-image" src="../assets/images/logo.png" alt="Submit" width="75" height="75">
+      <a routerLink="home"><em><img class="logo-image" src="../../../../assets/images/logo.png" alt="Submit" width="75" height="75">
          OEMS</em></a>
     </div>
     <nav id="menu" class="main-nav" role="navigation">
