--- a/src/app/all-component/public/home/home.component.css
+++ b/src/app/all-component/public/home/home.component.css
@@ -1,3 +1,4 @@
+@import url('../../../../assets/vendor/bootstrap/css/bootstrap.min.css');
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -15,8 +16,8 @@ a:hover {
 }
 
 ul {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -109,7 +110,7 @@ a.menu-link { display: none; }
   }
   nav[role="navigation"] li a {
     display: block;
-    padding: 15px 0px;
+    padding: 15px 0;
     border-bottom: 1px solid rgba(250,250,250,0.25);
     text-align: center;
     color: #fff;
@@ -169,7 +170,7 @@ a.menu-link { display: none; }
 }
 
 .main-banner .caption h6 {
-  margin-top: 0px;
+  margin-top: 0;
   font-size: 18px;
   text-transform: uppercase;
   font-weight: 600;
@@ -220,13 +221,13 @@ a.menu-link { display: none; }
 /* Features */
 
 section.features .col-4 {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .features-post {
   position: relative;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 .features-thumb {
@@ -250,7 +251,7 @@ section.features .col-4 {
 
 .features-content:hover {
     background-color: #0399FF;
-    box-shadow: 0px 0px 30px rgba(0,0,0,0.5);
+    box-shadow: 0 0 30px rgba(0,0,0,0.5);
 }
 
 .features-content h4 {
@@ -259,7 +260,7 @@ section.features .col-4 {
     font-weight: 700;
     color: #fff;
     letter-spacing: 1px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .features-content h4 i {
@@ -268,7 +269,7 @@ section.features .col-4 {
 }
 
 .features-content p {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .features-content a {
@@ -319,7 +320,7 @@ section.features .col-4 {
     display: block;
   }
   .features-content a {
-    letter-spacing: 0px;
+    letter-spacing: 0;
     font-size: 13px;
     font-weight: 600;
   }
@@ -458,7 +459,7 @@ section.why-us {
 @media screen and (max-width: 767px) {
 
   .tabs-content img {
-      padding-right: 0px;
+      padding-right: 0;
   }
 
 }
@@ -470,7 +471,7 @@ section.video {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #172238;
-    padding: 120px 0px;
+    padding: 120px 0;
 }
 
 section.video .left-content {
@@ -505,7 +506,7 @@ section.video .left-content .main-button {
   position: relative;
   width: 100%;
   max-width: 600px;
-  margin: 0px auto 0;
+  margin: 0 auto 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -549,9 +550,8 @@ section.video .left-content .main-button {
   right: 20px;
   margin-top: -12.5px;
   margin-left: -7px;
-  border: solid 13px transparent;
-  border-left: solid 20px;
-  border-left-color: #fff;
+  border: 13px solid transparent;
+  border-left: 20px #fff;
   z-index: 10;
 }
 .video-item figure a:hover:before {
@@ -603,7 +603,7 @@ section.contact form input {
     width: 100%;
     height: 40px;
     background-color: rgba(250,250,250,0.1);
-    border-radius: 0px;
+    border-radius: 0;
     border: none;
     outline: none;
     color: #fff;
@@ -618,7 +618,7 @@ section.contact form textarea {
     max-height: 280px;
     min-height: 220px;
     background-color: rgba(250,250,250,0.1);
-    border-radius: 0px;
+    border-radius: 0;
     border: none;
     outline: none;
     color: #fff;
