--- a/src/app/all-component/public/home/home.component.css
+++ b/src/app/all-component/public/home/home.component.css
@@ -1,4 +1,4 @@
-@import url('../../../../assets/vendor/bootstrap/css/bootstrap.min.css');
+/*@import url('../../../../assets/vendor/bootstrap/css/bootstrap.min.css');*/
 body {
     font-family: 'Montserrat', sans-serif;
 }
